@@ -3,6 +3,7 @@ package com.bootdo.modular.po.service;
 import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
+import com.baomidou.mybatisplus.core.conditions.Wrapper;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
@@ -28,13 +29,12 @@ import com.bootdo.modular.rp.param.RPOrderQryParam;
 import com.bootdo.modular.rp.service.RPOrderEntryService;
 import com.bootdo.modular.rp.service.RPOrderService;
 import com.bootdo.modular.rp.service.RPOrderSettleService;
+import jakarta.annotation.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.annotation.Resource;
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author L
@@ -80,7 +80,7 @@ public class OrderService extends ServiceImpl<OrderDao, OrderDO> {
         List<OrderDO> orderDOList = this.list(Wrappers.lambdaQuery(OrderDO.class).in(OrderDO::getBillNo, param.getBillNos()));
         //去除已经是审核（未审核）状态的订单
         List<OrderDO> auditOrderList = orderDOList.stream()
-                .filter(orderDO -> !auditStatus.equals(orderDO.getAuditStatus())).collect(Collectors.toList());
+                .filter(orderDO -> !auditStatus.equals(orderDO.getAuditStatus())).toList();
         //审核采购单重新计算商品成本、生成收付款单
         auditOrderList.forEach(orderDO -> {
             handleCostAndAudit(orderDO, auditStatus);
@@ -131,6 +131,18 @@ public class OrderService extends ServiceImpl<OrderDao, OrderDO> {
     public void batchRemove(List<String> billNos) {
         this.remove(Wrappers.lambdaQuery(OrderDO.class).in(OrderDO::getBillNo, billNos));
         orderEntryDao.delete(Wrappers.lambdaQuery(OrderEntryDO.class).in(OrderEntryDO::getBillNo, billNos));
+    }
+
+    @Transactional(rollbackFor = Exception.class)
+    public boolean saveOrUpdate(OrderDO entity, Wrapper<OrderDO> updateWrapper) {
+        // 首先尝试根据条件更新记录
+        boolean updated = update(entity, updateWrapper);
+        if (updated) {
+            // 如果更新成功，直接返回 true
+            return true;
+        }
+        // 如果更新失败（通常是因为没有找到符合条件的记录），则执行插入操作
+        return save(entity);
     }
 
 }
